--- a/elasticsearch-example-common/pom.xml
+++ b/elasticsearch-example-common/pom.xml
@@ -41,6 +41,11 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
